@@ -15,7 +15,6 @@ import com.powsybl.iidm.network.test.ThreeWindingsTransformerNetworkFactory;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -28,40 +27,40 @@ class SubNetworkPredicateTest {
     void testEsgTuto() {
         Network network = EurostagTutorialExample1Factory.create();
         NetworkPredicate predicate = new SubNetworkPredicate(network.getVoltageLevel("VLHV1"), 1);
-        assertEquals(List.of("P1", "P2"), network.getSubstationStream().filter(predicate::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("VLGEN", "VLHV1", "VLHV2"), network.getVoltageLevelStream().filter(predicate::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("P1", "P2"), network.getSubstationStream().filter(predicate::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("VLGEN", "VLHV1", "VLHV2"), network.getVoltageLevelStream().filter(predicate::test).map(Identifiable::getId).toList());
     }
 
     @Test
     void test3wt() {
         Network network = ThreeWindingsTransformerNetworkFactory.create();
         NetworkPredicate predicate = new SubNetworkPredicate(network.getVoltageLevel("VL_132"), 1);
-        assertEquals(List.of("SUBSTATION"), network.getSubstationStream().filter(predicate::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("VL_132", "VL_33", "VL_11"), network.getVoltageLevelStream().filter(predicate::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("SUBSTATION"), network.getSubstationStream().filter(predicate::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("VL_132", "VL_33", "VL_11"), network.getVoltageLevelStream().filter(predicate::test).map(Identifiable::getId).toList());
     }
 
     @Test
     void testFourSubstations() {
         Network network = FourSubstationsNodeBreakerFactory.create();
         NetworkPredicate predicate0 = new SubNetworkPredicate(network.getVoltageLevel("S1VL1"), 0);
-        assertEquals(List.of("S1"), network.getSubstationStream().filter(predicate0::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("S1VL1"), network.getVoltageLevelStream().filter(predicate0::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("S1"), network.getSubstationStream().filter(predicate0::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("S1VL1"), network.getVoltageLevelStream().filter(predicate0::test).map(Identifiable::getId).toList());
 
         NetworkPredicate predicate1 = new SubNetworkPredicate(network.getVoltageLevel("S1VL1"), 1);
-        assertEquals(List.of("S1"), network.getSubstationStream().filter(predicate1::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("S1VL1", "S1VL2"), network.getVoltageLevelStream().filter(predicate1::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("S1"), network.getSubstationStream().filter(predicate1::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("S1VL1", "S1VL2"), network.getVoltageLevelStream().filter(predicate1::test).map(Identifiable::getId).toList());
 
         NetworkPredicate predicate2 = new SubNetworkPredicate(network.getVoltageLevel("S1VL1"), 2);
-        assertEquals(List.of("S1", "S2", "S3"), network.getSubstationStream().filter(predicate2::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1"), network.getVoltageLevelStream().filter(predicate2::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("S1", "S2", "S3"), network.getSubstationStream().filter(predicate2::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1"), network.getVoltageLevelStream().filter(predicate2::test).map(Identifiable::getId).toList());
 
         NetworkPredicate predicate3 = new SubNetworkPredicate(network.getVoltageLevel("S1VL1"), 3);
-        assertEquals(List.of("S1", "S2", "S3", "S4"), network.getSubstationStream().filter(predicate3::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1", "S4VL1"), network.getVoltageLevelStream().filter(predicate3::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("S1", "S2", "S3", "S4"), network.getSubstationStream().filter(predicate3::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1", "S4VL1"), network.getVoltageLevelStream().filter(predicate3::test).map(Identifiable::getId).toList());
 
         NetworkPredicate predicate150 = new SubNetworkPredicate(network.getVoltageLevel("S1VL1"), 150);
-        assertEquals(List.of("S1", "S2", "S3", "S4"), network.getSubstationStream().filter(predicate150::test).map(Identifiable::getId).collect(Collectors.toList()));
-        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1", "S4VL1"), network.getVoltageLevelStream().filter(predicate150::test).map(Identifiable::getId).collect(Collectors.toList()));
+        assertEquals(List.of("S1", "S2", "S3", "S4"), network.getSubstationStream().filter(predicate150::test).map(Identifiable::getId).toList());
+        assertEquals(List.of("S1VL1", "S1VL2", "S2VL1", "S3VL1", "S4VL1"), network.getVoltageLevelStream().filter(predicate150::test).map(Identifiable::getId).toList());
     }
 
     @Test
